Una parte terminada

--- a/html/about.html
+++ b/html/about.html
@@ -8,94 +8,16 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="../styles.css">
   <link rel="shortcut icon" href="Icono.svg" type="image/x-icon" />
-  <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-    body {
-      font-family: 'Quicksand', sans-serif;
-      background-color: #f3fcf8;
-      color: #333;
-      line-height: 1.7;
-    }
-    .section {
-      display: flex;
-      flex-wrap: wrap;
-      padding: 4rem 2rem;
-      align-items: center;
-      gap: 2rem;
-    }
-    .section:nth-child(even) {
-      flex-direction: row-reverse;
-      background: linear-gradient(to right, #e0f7ef, #ffffff);
-    }
-    .section .text {
-      flex: 1 1 50%;
-      padding: 1rem;
-    }
-    .section .image {
-      flex: 1 1 45%;
-      text-align: center;
-    }
-    .section img {
-      max-width: 100%;
-      border-radius: 16px;
-      height: auto;
-    }
-    h2 {
-      font-size: 2rem;
-      margin-bottom: 1rem;
-      color: #158466;
-    }
-    p {
-      font-size: 1.15rem;
-      margin-bottom: 1.5rem;
-    }
-    .features {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 2rem;
-      justify-content: center;
-      margin-top: 2rem;
-    }
-    .feature-block {
-      flex: 1 1 250px;
-      background: #ffffff;
-      border-radius: 16px;
-      padding: 1.5rem;
-      text-align: center;
-      box-shadow: 0 5px 20px rgba(0, 0, 0, 0.05);
-    }
-    .feature-block i {
-      font-size: 2rem;
-      margin-bottom: 1rem;
-      color: #f9a826;
-    }
-    .feature-block h4 {
-      font-size: 1.2rem;
-      font-weight: 700;
-      margin-bottom: 0.5rem;
-    }
-    .feature-block p {
-      font-size: 1rem;
-      color: #555;
-    }
-    .background-section {
-      background-image: url('fondo-patron-ninos.jpg');
-      background-size: cover;
-      background-position: center;
-    }
-  </style>
+
 </head>
-<body>
+<body class="body-about">
     <header class="header">
-      <button class="parent-control"><a class="button-a" href="/html/controlParent.html">Control Parental</a></button>
+      <button class="parent-control"><a class="button-a" href="controlParent.html">Control Parental</a></button>
+      <button class="loguito"><a href="/index.html" class="logo-inicio"><img src="/src/img/Logo.svg" alt=""></a></button>
       <button class="profile-btn"><a class="button-a" href="perfil.html"><img src="../../src/img/Perfil.svg" alt=""></a></button>
     </header>
 
-  <section class="section background-section">
+  <section class="sections background-section">
     <div class="text">
       <h2>Identidad del Proyecto</h2>
       <p><strong>Misión:</strong> Fomentar el amor por la cultura nicaragüense a través de experiencias digitales entretenidas para niños.</p>
@@ -107,7 +29,7 @@
     </div>
   </section>
 
-  <section class="section">
+  <section class="sections">
     <div class="text">
       <h2>Origen e Inspiración</h2>
       <p>Paquito nació como una respuesta universitaria ante la pérdida de identidad cultural provocada por la globalización digital. El personaje principal, un chocoyo llamado Paquito, representa la repetición de historias orales tradicionales.</p>
@@ -117,7 +39,7 @@
     </div>
   </section>
 
-  <section class="section background-section">
+  <section class="sections background-section">
     <div class="text">
       <h2>Equipo de Trabajo</h2>
       <p>Este proyecto fue desarrollado por 3 estudiantes de la Universidad Nacional de Ingeniería (UNI): tres del área de Ingeniería en Sistemas, y una estudiante de Diseño Gráfico. Juntos combinan tecnología y creatividad para dar vida a Paquito.</p>
@@ -127,7 +49,7 @@
     </div>
   </section>
 
-  <section class="section">
+  <section class="sections">
     <div class="text">
       <h2>Características de la App</h2>
       <div class="features">
@@ -163,7 +85,7 @@
     </div>
   </section>
 
-  <section class="section background-section">
+  <section class="sections background-section">
     <div class="text">
       <h2>Impacto Esperado</h2>
       <p>Buscamos fortalecer la educación cultural infantil a través del juego y la tecnología. Paquito pretende que los niños se apropien de su herencia cultural con orgullo y diversión.</p>
