--- a/html/controlParent.html
+++ b/html/controlParent.html
@@ -7,116 +7,16 @@
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="../styles.css">
-  <link rel="shortcut icon" href="Icono.svg" type="image/x-icon" />
-  <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-    body {
-      font-family: 'Quicksand', sans-serif;
-      color: #333;
-      background-color: #f2fdf9;
-      line-height: 1.6;
-    }
-    .heading {
-      background: linear-gradient(to right, #72d9b0, #4dbd8f);
-      color: white;
-      padding: 2rem 1rem;
-      text-align: center;
-    }
-    .heading h1 {
-      font-size: 2.5rem;
-      margin-bottom: 0.5rem;
-    }
-    .heading p {
-      font-size: 1.2rem;
-    }
-    .section {
-      position: relative;
-      padding: 4rem 2rem;
-      overflow: hidden;
-      z-index: 1;
-    }
-    .section-about::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-image: url('../src/img/About1.png');
-      background-size: cover;
-      background-position: center;
-      filter: blur(8px) brightness(0.9);
-      z-index: -1;
-    }
-    .section-content {
-      max-width: 1100px;
-      margin: 0 auto;
-      background-color: rgba(255, 255, 255, 0.8);
-      padding: 2rem;
-      border-radius: 16px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-    }
-    h2 {
-      color: #158466;
-      font-size: 2rem;
-      margin-bottom: 1rem;
-    }
-    p {
-      font-size: 1.1rem;
-      margin-bottom: 1rem;
-    }
-    .resources {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 1.5rem;
-      margin-top: 2rem;
-      justify-content: center;
-    }
-    .resource-card {
-      background: #ffffff;
-      border-radius: 12px;
-      padding: 1rem;
-      width: 250px;
-      text-align: center;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
-      transition: transform 0.2s ease;
-    }
-    .resource-card:hover {
-      transform: translateY(-5px);
-      background-color: #f9f9f9;
-    }
-    .resource-card i {
-      font-size: 2rem;
-      margin-bottom: 0.5rem;
-      color: #f9a826;
-    }
-    .resource-card a {
-      text-decoration: none;
-      color: #158466;
-      font-weight: 600;
-    }
-    footer {
-      background-color: #158466;
-      color: white;
-      text-align: center;
-      padding: 2rem 1rem;
-      margin-top: 3rem;
-    }
-    footer p {
-      font-size: 0.95rem;
-    }
-  </style>
+  <link rel="shortcut icon" href="/src/img/Icono.svg" type="image/x-icon" />
+
 </head>
-<body>
+<body class="body-controlParent">
     <header class="header">
       <button class="parent-control"><a class="button-a" href="#">Control Parental</a></button>
+      <button class="loguito"><a href="/index.html" class="logo-inicio"><img src="/src/img/Logo.svg" alt=""></a></button>
       <button class="profile-btn"><a class="button-a" href="perfil.html"><img src="../../src/img/Perfil.svg" alt=""></a></button>
     </header>
-  <div class="heading">
+  <div class="heading-text">
     <h1>Para Pradres de Familia</h1>
     <p>Descubre cómo Paquito te Cuenta promueve la cultura nicaragüense entre las nuevas generaciones.</p>
   </div>
@@ -129,8 +29,8 @@
     </div>
   </section>
 
-  <section class="section">
-    <div class="section-content">
+  <section class="section-resources">
+    <div class="section-content sc-resources">
       <h2>Recursos para Madres, Padres y Docentes</h2>
       <div class="resources">
         <div class="resource-card">
