--- a/html/video/player-video.html
+++ b/html/video/player-video.html
@@ -9,8 +9,9 @@
 </head>
 <body>
   <header class="header">
-      <button class="parent-control"><a class="button-a" href="#">Control Parental</a></button>
-      <button class="profile-btn"><a class="button-a" href="../perfil.html"><img src="../../src/img/Perfil.svg" alt=""></a></button>
+      <button class="parent-control"><a class="button-a" href="/html/controlParent.html">Control Parental</a></button>
+      <button class="loguito"><a href="/index.html" class="logo-inicio"><img src="/src/img/Logo.svg" alt=""></a></button>
+      <button class="profile-btn"><a class="button-a" href="/html/perfil.html"><img src="/src/img/Perfil.svg" alt=""></a></button>
   </header>
 
     <aside class="sidebar">
@@ -22,38 +23,41 @@
       <button class="icon-button icon-game">
         <a class="button-a" href="../game/games.html">
           <img src="../../src/img/Game.svg" alt="">
-        </a></button>
+        </a>
+      </button>
       <button class="icon-button icon-media">
         <a class="button-a" href="../video/videos.html">
           <img src="../../src/img/MultMedia.svg" alt="">
-        </a></button>
+        </a>
+      </button>
     </aside>
 
-    <main class="reproductor-video">
-      <video id="video" src="../../src/video/Los Cadejos.mp4">
-        Tu navegador no soporta el elemento de video.
-      </video>
+      <main class="main-content reproductor-video">
+      <div class="media-video">
+        <video id="video" src="../../src/video/Los Cadejos.mp4">
+          Tu navegador no soporta el elemento de video.
+        </video>
 
-      <div class="video-controls">
-        <button id="retro" class="control-btn">⏪</button>
-        <button id="play" class="control-btn">▶️</button>
-        <button id="avan" class="control-btn">⏩</button>
-        <button id="full" class="control-btn">⛶</button>
-      </div>
+        <div class="controls audio-controls">
+          <button id="retroceder" class="control-btn"><img src="../../src/img/Atras.svg" alt=""></button>
+          <button id="play" class="control-btn pause"><img src="../../src/img/Play.svg" alt="" id="plays"></button>
+          <button id="avanzar" class="control-btn"><img src="../../src/img/Adelantar.svg" alt=""></button>
+          <button id="full" class="control-btn">⛶</button>
+        </div>
 
-      <div class="video-progress">
-        <span id="tiempoActual">00:00</span>
-        <input type="range" id="progreso" min="0" value="0">
-        <span id="duracionTotal">00:00</span>
-      </div>
+        <div class="video-progress">
+          <span id="tiempoActual">00:00</span>
+          <input type="range" id="progreso" min="0" value="0">
+          <span id="duracionTotal">00:00</span>
+        </div>
 
-      <div class="action-buttons">
-        <a class="btn btn_video">Ver</a>
-        <a class="btn btn_lectura">Leer</a>
-        <a class="btn btn_audio">Escuchar</a>
+        <div class="actions">
+          <button class="action-btn"><a href="#"><img src="../../src/img/View.svg" alt="" class="action">Ver</a></button>
+          <button class="action-btn"><a href="../video/player-historia.html"><img src="../../src/img/Read.svg" alt="" class="action">Leer</a></button>
+          <button class="action-btn"><a href="../video/player-audio.html"><img src="../../src/img/Escuchar.svg" alt="" class="action">Escuchar</a></button>
+        </div>
       </div>
     </main>
-    </main>
-  <script src="../scripts.js"></script>
+  <script src="../../scripts.js"></script>
 </body>
 </html>
