--- a/html/perfil.html
+++ b/html/perfil.html
@@ -9,9 +9,12 @@
 </head>
 <body>
     <header class="header">
-        <button class="parent-control"><a class="button-a" href="/html/controlParent.html">Control Parental</a></button>
-        <button class="loguito"><a href="/index.html" class="logo-inicio"><img src="/src/img/Logo.svg" alt=""></a></button>
-        <button class="profile-btn"><a class="button-a" href="#"><img src="../../src/img/Perfil.svg" alt=""></a></button>
+      <button class="parent-control"><a class="button-a" href="controlParent.html">Control Parental</a></button>
+      <button class="loguito"><a href="/index.html" class="logo-inicio"><img src="/src/img/Logo.svg" alt=""></a></button>
+      <button class="profile-btn"><a class="button-a" href="./formulario/formulario-personal.html"><img src="../../src/img/Perfil.svg" alt=""></a></button>
     </header>
+  <footer>
+    © 2025 Paquito te Cuenta - Todos los derechos reservados
+  </footer>
 </body>
 </html>
