--- a/html/video/player-historia2.html
+++ b/html/video/player-historia2.html
@@ -36,15 +36,16 @@
     <main class="main-content">
       <h1>La leyenda del Cadejo</h1>
       <div class="history">
-        <div class="arrow-left"><a href="./player-historia5.html"><img class="arrow" src="../../src/img/Anterior.svg" alt=""></a></div>
-        <div class="media-frame"><img src="/src/img/Portada.png" alt=""></div>
-        <div class="arrow-right"><a href="./player-historia1.html"><img class="arrow" src="../../src/img/Siguiente.svg" alt=""></a></div>
+        <div class="arrow-left"><a href="./player-historia1.html"><img class="arrow" src="../../src/img/Anterior.svg" alt=""></a></div>
+        <div class="media-frame"><img src="/src/img/Historia3.png" alt=""></div>
+        <div class="arrow-right"><a href="./player-historia3.html"><img class="arrow" src="../../src/img/Siguiente.svg" alt=""></a></div>
       </div>
-      <p class="description">
-        En esta leyenda centroamericana existen dos cadejos o perros uno blanco que
-        representa el bien y uno de color negro y ojos llameantes que representa el mal.
-      </p>
-        
+        <p class="description">
+          Diciendo hasta el fin de tus días servirás de compañía a los borrachos
+          como tú, su madre presente al ver la transformación, con su inmenso amor de madre
+          sacó lo bueno del alma de su hijo y con ello creó un hermoso perro blanco de
+          ojos azules que representará el bien.
+        </p>
       <div class="actions">
         <button class="action-btn"><a href="../video/player-video.html"><img src="../../src/img/View.svg" alt="" class="action">Ver</a></button>
         <button class="action-btn"><a href="#"><img src="../../src/img/Read.svg" alt="" class="action">Leer</a></button>
