--- a/html/video/player-video.html
+++ b/html/video/player-video.html
@@ -11,7 +11,7 @@
   <header class="header">
       <button class="parent-control"><a class="button-a" href="/html/controlParent.html">Control Parental</a></button>
       <button class="loguito"><a href="/index.html" class="logo-inicio"><img src="/src/img/Logo.svg" alt=""></a></button>
-      <button class="profile-btn"><a class="button-a" href="/html/perfil.html"><img src="/src/img/Perfil.svg" alt=""></a></button>
+      <button class="profile-btn"><a class="button-a" href="/html/formulario/formulario-personal.html"><img src="/src/img/Perfil.svg" alt=""></a></button>
   </header>
 
     <aside class="sidebar">
