--- a/index.html
+++ b/index.html
@@ -10,21 +10,12 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
     <link rel="stylesheet" href="styles.css" />
-    <style>
-      * {
-        box-sizing: border-box;
-        margin: 0;
-        padding: 0;
-      }
-
-
-    </style>
   </head>
   <body class="body-index">
   <header class="header">
       <button class="parent-control"><a class="button-a" href="/html/controlParent.html">Control Parental</a></button>
       <button class="loguito"><a href="/index.html" class="logo-inicio"><img src="/src/img/Logo.svg" alt=""></a></button>
-      <button class="profile-btn"><a class="button-a" href="/html/perfil.html"><img src="/src/img/Perfil.svg" alt=""></a></button>
+      <button class="profile-btn"><a class="button-a" href="/html/formulario/formulario-personal.html"><img src="/src/img/Perfil.svg" alt=""></a></button>
   </header>
     <!-- Separador -->
     <main>
@@ -114,10 +105,10 @@
       <section class="newsMedia">
         <div class="newsMedia_videos">
           <div class="newsMedia_list">
-            <div class="video_item"><img src="/src/img/Portada.png" alt=""></div>
-            <div class="video_item"><img src="/src/img/Portada.png" alt=""></div>
-            <div class="video_item"><img src="/src/img/Portada.png" alt=""></div>
-            <div class="video_item"><img src="/src/img/Portada.png" alt=""></div>
+            <div class="video_item"><a href="/html/video/player-video.html"></a><img src="/src/img/Portada.png" alt=""></a></div>
+            <div class="video_item"><a href="/html/video/player-video.html"></a><img src="/src/img/Portada.png" alt=""></a></div>
+            <div class="video_item"><a href="/html/video/player-video.html"></a><img src="/src/img/Portada.png" alt=""></a></div>
+            <div class="video_item"><a href="/html/video/player-video.html"></a><img src="/src/img/Portada.png" alt=""></a></div>
           </div>
           <div class="btn btn-rect btn_newsJuegos"><a href="/html/video/videos.html">Ver más <span><img src="./src/img/arrow-circle-right.svg" alt="Icon ver más"></span></a></div>
           </button>
@@ -125,10 +116,10 @@
         <!-- Separador -->
         <div class="newsMedia_juegos">
           <div class="newsMedia_list">
-            <div class="juego_item"><img src="/src/img/Portada1.png" alt=""></div>
-            <div class="juego_item"><img src="/src/img/Portada1.png" alt=""></div>
-            <div class="juego_item"><img src="/src/img/Portada1.png" alt=""></div>
-            <div class="juego_item"><img src="/src/img/Portada1.png" alt=""></div>
+            <div class="juego_item"><a href="404.html"><img src="/src/img/Portada1.png" alt=""></a></div>
+            <div class="juego_item"><a href="404.html"><img src="/src/img/Portada1.png" alt=""></a></div>
+            <div class="juego_item"><a href="404.html"><img src="/src/img/Portada1.png" alt=""></a></div>
+            <div class="juego_item"><a href="404.html"><img src="/src/img/Portada1.png" alt=""></a></div>
           </div>
           <div class="btn btn-rect btn_newsJuegos"><a href="/html/game/games.html">Ver más <span><img src="./src/img/arrow-circle-right.svg" alt="Icon ver más"></span></a></div>
         </div>
