--- a/html/about.html
+++ b/html/about.html
@@ -14,7 +14,7 @@
     <header class="header">
       <button class="parent-control"><a class="button-a" href="controlParent.html">Control Parental</a></button>
       <button class="loguito"><a href="/index.html" class="logo-inicio"><img src="/src/img/Logo.svg" alt=""></a></button>
-      <button class="profile-btn"><a class="button-a" href="perfil.html"><img src="../../src/img/Perfil.svg" alt=""></a></button>
+      <button class="profile-btn"><a class="button-a" href="./formulario/formulario-personal.html"><img src="../../src/img/Perfil.svg" alt=""></a></button>
     </header>
 
   <section class="sections background-section">
