--- a/html/video/player-audio.html
+++ b/html/video/player-audio.html
@@ -11,7 +11,7 @@
   <header class="header">
       <button class="parent-control"><a class="button-a" href="/html/controlParent.html">Control Parental</a></button>
       <button class="loguito"><a href="/index.html" class="logo-inicio"><img src="/src/img/Logo.svg" alt=""></a></button>
-      <button class="profile-btn"><a class="button-a" href="/html/perfil.html"><img src="/src/img/Perfil.svg" alt=""></a></button>
+      <button class="profile-btn"><a class="button-a" href="/html/formulario/formulario-personal.html"><img src="/src/img/Perfil.svg" alt=""></a></button>
   </header>
 
     <aside class="sidebar">
@@ -37,11 +37,11 @@
 
       <audio id="audio" src="../../src/audio/Los Cadejos.mp3"></audio>
 
-      <div class="controls audio-controls">
-        <button id="retroceder" class="control-btn"><img src="../../src/img/Atras.svg" alt=""></button>
-        <button id="playPause" class="control-btn pause"><img src="../../src/img/Play.svg" alt=""></button>
-        <button id="avanzar" class="control-btn"><img src="../../src/img/Adelantar.svg" alt=""></button>
-      </div>
+        <div class="controls audio-controls">
+          <button id="retroceder" class="control-btn"><img src="../../src/img/Atras.svg" alt=""></button>
+          <button id="play" class="control-btn pause"><img src="../../src/img/Play.svg" alt="" id="plays"></button>
+          <button id="avanzar" class="control-btn"><img src="../../src/img/Adelantar.svg" alt=""></button>
+        </div>
 
       <div class="progress-bar" id="barra">
         <div class="progress" id="progreso"></div>
