--- a/html/video/player-historia3.html
+++ b/html/video/player-historia3.html
@@ -36,13 +36,15 @@
     <main class="main-content">
       <h1>La leyenda del Cadejo</h1>
       <div class="history">
-        <div class="arrow-left"><a href="./player-historia5.html"><img class="arrow" src="../../src/img/Anterior.svg" alt=""></a></div>
-        <div class="media-frame"><img src="/src/img/Portada.png" alt=""></div>
-        <div class="arrow-right"><a href="./player-historia1.html"><img class="arrow" src="../../src/img/Siguiente.svg" alt=""></a></div>
+        <div class="arrow-left"><a href="./player-historia2.html"><img class="arrow" src="../../src/img/Anterior.svg" alt=""></a></div>
+        <div class="media-frame"><img src="/src/img/Historia4.png" alt=""></div>
+        <div class="arrow-right"><a href="./player-historia4.html"><img class="arrow" src="../../src/img/Siguiente.svg" alt=""></a></div>
       </div>
       <p class="description">
-        En esta leyenda centroamericana existen dos cadejos o perros uno blanco que
-        representa el bien y uno de color negro y ojos llameantes que representa el mal.
+        Venían los estudiantes por el camino, lo que no sabían era que escondido entre el
+        monte estaba el cadejo negro. Los esperaba para asustarlos, ellos confiados caminaban de
+        regreso a casa cuando de pronto de lejos, en una veloz carrera, apareció el cadejo
+        blanco que ferozmente atacó al cadejo negro.
       </p>
         
       <div class="actions">
