--- a/html/video/player-historia4.html
+++ b/html/video/player-historia4.html
@@ -36,13 +36,15 @@
     <main class="main-content">
       <h1>La leyenda del Cadejo</h1>
       <div class="history">
-        <div class="arrow-left"><a href="./player-historia5.html"><img class="arrow" src="../../src/img/Anterior.svg" alt=""></a></div>
-        <div class="media-frame"><img src="/src/img/Portada.png" alt=""></div>
-        <div class="arrow-right"><a href="./player-historia1.html"><img class="arrow" src="../../src/img/Siguiente.svg" alt=""></a></div>
+        <div class="arrow-left"><a href="./player-historia3.html"><img class="arrow" src="../../src/img/Anterior.svg" alt=""></a></div>
+        <div class="media-frame"><img src="/src/img/Historia5.png" alt=""></div>
+        <div class="arrow-right"><a href="./player-historia5.html"><img class="arrow" src="../../src/img/Siguiente.svg" alt=""></a></div>
       </div>
       <p class="description">
-        En esta leyenda centroamericana existen dos cadejos o perros uno blanco que
-        representa el bien y uno de color negro y ojos llameantes que representa el mal.
+        Después de unas cuantas mordidas el cejo negro desapareció corriendo
+        hacia el monte, el cadejo blanco se acomodó al lado del más pequeño y
+        alegremente lo siguió, ellos estaban felizmente curiosos de la grata
+        compañía. Mientras tanto en otro lugar.
       </p>
         
       <div class="actions">
