--- a/html/video/player-historia5.html
+++ b/html/video/player-historia5.html
@@ -36,13 +36,14 @@
     <main class="main-content">
       <h1>La leyenda del Cadejo</h1>
       <div class="history">
-        <div class="arrow-left"><a href="./player-historia5.html"><img class="arrow" src="../../src/img/Anterior.svg" alt=""></a></div>
-        <div class="media-frame"><img src="/src/img/Portada.png" alt=""></div>
-        <div class="arrow-right"><a href="./player-historia1.html"><img class="arrow" src="../../src/img/Siguiente.svg" alt=""></a></div>
+        <div class="arrow-left"><a href="./player-historia4.html"><img class="arrow" src="../../src/img/Anterior.svg" alt=""></a></div>
+        <div class="media-frame"><img src="/src/img/Historia6.png" alt=""></div>
+        <div class="arrow-right"><a href="./player-historia.html"><img class="arrow" src="../../src/img/Siguiente.svg" alt=""></a></div>
       </div>
       <p class="description">
-        En esta leyenda centroamericana existen dos cadejos o perros uno blanco que
-        representa el bien y uno de color negro y ojos llameantes que representa el mal.
+        El cadejo negro cumple con su maldición de acompañar a los borrachos, que ni se dan
+        cuenta por el exceso de licor del diabólico animal que los acompaña y que
+        los acompañará seguramente hasta el fin de los días
       </p>
         
       <div class="actions">
