--- a/html/video/videos.html
+++ b/html/video/videos.html
@@ -12,7 +12,7 @@
   <header class="header">
       <button class="parent-control"><a class="button-a" href="/html/controlParent.html">Control Parental</a></button>
       <button class="loguito"><a href="/index.html" class="logo-inicio"><img src="/src/img/Logo.svg" alt=""></a></button>
-      <button class="profile-btn"><a class="button-a" href="/html/perfil.html"><img src="/src/img/Perfil.svg" alt=""></a></button>
+      <button class="profile-btn"><a class="button-a" href="/html/formulario/formulario-personal.html"><img src="/src/img/Perfil.svg" alt=""></a></button>
   </header>
 
   <section class="section-top">
@@ -36,14 +36,14 @@
   <section>
     <h2 class="section-title">Las tortillas calientes del comal</h2>
     <div class="videos">
-      <div class="video-thumb"><img src="/src/img/Portada.png" alt=""></div>
-      <div class="video-thumb"><img src="/src/img/Portada1.png" alt=""></div>
-      <div class="video-thumb"><img src="/src/img/Portada2.png" alt=""></div>
-      <div class="video-thumb"><img src="/src/img/Portada3.png" alt=""></div>
-      <div class="video-thumb"><img src="/src/img/Portada2.png" alt=""></div>
-      <div class="video-thumb"><img src="/src/img/Portada.png" alt=""></div>
-      <div class="video-thumb"><img src="/src/img/Portada3.png" alt=""></div>
-      <div class="video-thumb"><img src="/src/img/Portada1.png" alt=""></div>
+      <div class="video-thumb"><a href="../video/player-video.html"><img src="/src/img/Portada.png" alt=""></a></div>
+      <div class="video-thumb"><a href="/404.html"><img src="/src/img/Portada1.png" alt=""></a></div>
+      <div class="video-thumb"><a href="/404.html"><img src="/src/img/Portada2.png" alt=""></a></div>
+      <div class="video-thumb"><a href="/404.html"><img src="/src/img/Portada3.png" alt=""></a></div>
+      <div class="video-thumb"><a href="/404.html"><img src="/src/img/Portada2.png" alt=""></a></div>
+      <div class="video-thumb"><a href="../video/player-video.html"><img src="/src/img/Portada.png" alt=""></a></div>
+      <div class="video-thumb"><a href="/404.html"><img src="/src/img/Portada3.png" alt=""></a></div>
+      <div class="video-thumb"><a href="/404.html"><img src="/src/img/Portada1.png" alt=""></a></div>
     </div>
   </section>
 
@@ -52,10 +52,10 @@
     <div class="videos-list">
       <button class="arrow-left"><img class="arrow" src="../../src/img/Anterior.svg" alt=""></button>
       <div class="videos">
-        <div class="video-thumb"><img src="/src/img/Portada2.png" alt=""></div>
-        <div class="video-thumb"><img src="/src/img/Portada.png" alt=""></div>
-        <div class="video-thumb"><img src="/src/img/Portada3.png" alt=""></div>
-        <div class="video-thumb"><img src="/src/img/Portada1.png" alt=""></div>
+        <div class="video-thumb"><a href="/404.html"><img src="/src/img/Portada2.png" alt=""></a></div>
+        <div class="video-thumb"><a href="../video/player-video.html"><img src="/src/img/Portada.png" alt=""></a></div>
+        <div class="video-thumb"><a href="/404.html"><img src="/src/img/Portada3.png" alt=""></a></div>
+        <div class="video-thumb"><a href="/404.html"><img src="/src/img/Portada1.png" alt=""></a></div>
       </div>
       <button class="arrow-right"><img class="arrow" src="../../src/img/Siguiente.svg" alt=""></i></b>
     </div>
@@ -66,10 +66,10 @@
     <div class="videos-list">
       <button class="arrow-left"><img class="arrow" src="../../src/img/Anterior.svg" alt=""></button>
       <div class="videos">
-        <div class="video-thumb"><img src="/src/img/Portada2.png" alt=""></div>
-        <div class="video-thumb"><img src="/src/img/Portada.png" alt=""></div>
-        <div class="video-thumb"><img src="/src/img/Portada3.png" alt=""></div>
-        <div class="video-thumb"><img src="/src/img/Portada1.png" alt=""></div>
+        <div class="video-thumb"><a href="/404.html"><img src="/src/img/Portada2.png" alt=""></a></div>
+        <div class="video-thumb"><a href="../video/player-video.html"><img src="/src/img/Portada.png" alt=""></a></div>
+        <div class="video-thumb"><a href="/404.html"><img src="/src/img/Portada3.png" alt=""></a></div>
+        <div class="video-thumb"><a href="/404.html"><img src="/src/img/Portada1.png" alt=""></a></div>
       </div>
       <button class="arrow-right"><img class="arrow" src="../../src/img/Siguiente.svg" alt=""></i></button>
     </div>
@@ -80,10 +80,10 @@
     <div class="videos-list">
       <button class="arrow-left"><img class="arrow" src="../../src/img/Anterior.svg" alt=""></button>
       <div class="videos">
-        <div class="video-thumb"><img src="/src/img/Portada2.png" alt=""></div>
-        <div class="video-thumb"><img src="/src/img/Portada.png" alt=""></div>
-        <div class="video-thumb"><img src="/src/img/Portada3.png" alt=""></div>
-        <div class="video-thumb"><img src="/src/img/Portada1.png" alt=""></div>
+        <div class="video-thumb"><a href="/404.html"><img src="/src/img/Portada2.png" alt=""></a></div>
+        <div class="video-thumb"><a href="../video/player-video.html"><img src="/src/img/Portada.png" alt=""></a></div>
+        <div class="video-thumb"><a href="/404.html"><img src="/src/img/Portada3.png" alt=""></a></div>
+        <div class="video-thumb"><a href="/404.html"><img src="/src/img/Portada1.png" alt=""></a></div>
       </div>
       <button class="arrow-right"><img class="arrow" src="../../src/img/Siguiente.svg" alt=""></i></button>
     </div>
@@ -94,10 +94,10 @@
     <div class="videos-list">
       <button class="arrow-left"><img class="arrow" src="../../src/img/Anterior.svg" alt=""></button>
       <div class="videos">
-        <div class="video-thumb"><img src="/src/img/Portada2.png" alt=""></div>
-        <div class="video-thumb"><img src="/src/img/Portada.png" alt=""></div>
-        <div class="video-thumb"><img src="/src/img/Portada3.png" alt=""></div>
-        <div class="video-thumb"><img src="/src/img/Portada1.png" alt=""></div>
+        <div class="video-thumb"><a href="/404.html"><img src="/src/img/Portada2.png" alt=""></a></div>
+        <div class="video-thumb"><a href="../video/player-video.html"><img src="/src/img/Portada.png" alt=""></a></div>
+        <div class="video-thumb"><a href="/404.html"><img src="/src/img/Portada3.png" alt=""></a></div>
+        <div class="video-thumb"><a href="/404.html"><img src="/src/img/Portada1.png" alt=""></a></div>
       </div>
       <button class="arrow-right"><img class="arrow" src="../../src/img/Siguiente.svg" alt=""></i></>
     </div>
@@ -106,9 +106,5 @@
   <footer>
     © 2025 Paquito te Cuenta - Todos los derechos reservados
   </footer>
-
-  <script>
-    // Aquí puedes agregar JS si deseas darle funcionalidad interactiva (por ejemplo scroll horizontal en grillas)
-  </script>
 </body>
 </html>
