--- a/html/formulario/formulario-personal.html
+++ b/html/formulario/formulario-personal.html
@@ -17,9 +17,9 @@
     <main class="profile-container">
 <!-- From Uiverse.io by ilkhoeri --> 
 <div class="card">
-  <form class="form" action="../perfil.html" method="post">
+  <form class="form" action="../perfil.html" method="get">
     <img src="/src/img/Paquito.svg" alt="">
-    <div class="title">Crea conmigo nuevamente</div>
+    <div class="title">¿Qué tal? ¿Trajiste manguitos?</div>
 
     <label class="label_input" for="usuario-input">Usuario</label>
     <input
@@ -52,5 +52,6 @@
   <footer>
     © 2025 Paquito te Cuenta - Todos los derechos reservados
   </footer>
+    <script src="../../script.js"></script>
 </body>
 </html>
