--- a/html/perfil.html
+++ b/html/perfil.html
@@ -1,18 +1,31 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perfil</title>
-    <link rel="stylesheet" href="../../styles.css"/>
-    <link rel="shortcut icon" href="../../Icono.svg" type="image/x-icon" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Perfil</title>
+  <link rel="stylesheet" href="../../styles.css" />
+  <link rel="shortcut icon" href="../../Icono.svg" type="image/x-icon" />
+  <style>
+    
+  </style>
 </head>
-<body>
-    <header class="header">
-      <button class="parent-control"><a class="button-a" href="controlParent.html">Control Parental</a></button>
-      <button class="loguito"><a href="/index.html" class="logo-inicio"><img src="/src/img/Logo.svg" alt=""></a></button>
-      <button class="profile-btn"><a class="button-a" href="./formulario/formulario-personal.html"><img src="../../src/img/Perfil.svg" alt=""></a></button>
-    </header>
+<body class="body-perfil">
+  <header class="header">
+    <button class="parent-control"><a class="button-a" href="controlParent.html">Control Parental</a></button>
+    <button class="loguito"><a href="/index.html" class="logo-inicio"><img src="/src/img/Logo.svg" alt="Inicio"></a></button>
+    <button class="profile-btn"><a class="button-a" href="./formulario/formulario-personal.html"><img src="../../src/img/Perfil.svg" alt="Perfil"></a></button>
+  </header>
+
+  <main class="main-container">
+    <div class="profile-card">
+      <img src="/src/img/PerfilNiño.png" alt="Foto de usuario">
+      <h2>Juanito Pérez</h2>
+      <p><strong>Edad:</strong> 9 años</p>
+      <p><strong>Usuario:</strong> juanito123</p>
+    </div>
+  </main>
+
   <footer>
     © 2025 Paquito te Cuenta - Todos los derechos reservados
   </footer>
