--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             />
           </div>
           <!-- Separador -->
-          <div class="heading_random">
+          <!-- <div class="heading_random">
             <h2 class="random_title">
               Paquito te quiere contar algo hoy...<br />¿Qué será?
             </h2>
@@ -77,7 +77,7 @@
                 <div class="seccion cuentos">Cuentos</div>
               </div>
             </div>
-          </div>
+          </div> -->
           <!-- Separador -->
           <div class="heading_others">
             <div class="video_new">
